@@ -277,3 +277,9 @@ MSG_IO_failed:
 MSG_PBM_import_failed:
   en: Failed to read Problemiste format
   ru: Ошибка при чтении формата Problemist
+MSG_PDF_export_failed:
+  en: PDF export failed
+  ru: Ошибка при экспорте PDF
+MSG_Confirm_delete_entry:
+  en: Delete this entry?
+  ru: Удалить эту композицию?
